# ChangeLog for app-admin/monit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.88 2014/09/30 02:58:54 patrick Exp $

*monit-5.9 (30 Sep 2014)

  30 Sep 2014; Patrick Lauer <patrick@gentoo.org> +monit-5.9.ebuild:
  Bump

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> monit-5.3.2.ebuild,
  monit-5.4-r1.ebuild, monit-5.5.1.ebuild, monit-5.5.ebuild, monit-5.6.ebuild,
  monit-5.7-r1.ebuild, monit-5.7.ebuild, monit-5.8.1-r1.ebuild,
  monit-5.8.ebuild:
  Fix description for more repoman happy

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> monit-5.8.ebuild:
  x86 stable wrt bug #509374

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> monit-5.8.ebuild:
  Stable for ppc, wrt bug #509374

  08 Jul 2014; Chema Alonso <nimiux@gentoo.org> monit-5.8.ebuild:
  Stable for amd64 wrt bug #509374

*monit-5.8.1-r1 (21 May 2014)

  21 May 2014; Patrick Lauer <patrick@gentoo.org> +monit-5.8.1-r1.ebuild,
  -monit-5.8.1.ebuild:
  Eapi plus plus plus

*monit-5.8.1 (20 May 2014)

  20 May 2014; Patrick Lauer <patrick@gentoo.org> +monit-5.8.1.ebuild:
  Bump

*monit-5.8 (02 Apr 2014)

  02 Apr 2014; Patrick Lauer <patrick@gentoo.org> +monit-5.8.ebuild:
  Bump

*monit-5.7-r1 (30 Mar 2014)

  30 Mar 2014; Pacho Ramos <pacho@gentoo.org> +files/monit.service,
  +monit-5.7-r1.ebuild:
  Add unit file (#504148 by Michael Hampicke)

*monit-5.7 (25 Feb 2014)

  25 Feb 2014; Patrick Lauer <patrick@gentoo.org> +monit-5.7.ebuild:
  Bump

*monit-5.6 (09 Sep 2013)

  09 Sep 2013; Patrick Lauer <patrick@gentoo.org> +monit-5.6.ebuild:
  Bump

*monit-5.5.1 (13 Jun 2013)

  13 Jun 2013; Patrick Lauer <patrick@gentoo.org> +monit-5.5.1.ebuild:
  Bump

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> monit-5.5.ebuild:
  Stable for ppc, wrt bug #469922

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> monit-5.5.ebuild:
  Stable for x86, wrt bug #469922
