@@ -19,6 +19,6 @@ EBUILD monit-5.7-r1.ebuild 1287 SHA256 adb19983ee95a0dc0bd1d9a4cccd5e7795ada3fd8
 EBUILD monit-5.7.ebuild 1217 SHA256 f0d5172f5d386875afd55773455381c22b309997b20e956fc5516aae615e3e04 SHA512 b458122f3b38db792fb85318555aa62b885ffcfa166d894174883b5c93f4327ae801f633e0a3280177d29c5775e46149c91a8744a8d1c88d4033fde8738fdce4 WHIRLPOOL b8c2f461e1814dbd6dd6dde40a8a9e1a89add7f909a4a6dcfeae0af4b32c55d57bf5bf0ab32b069b7ab8bf7ebc3ca31030045fdd3af70a6e1e1ea3126ca07686
 EBUILD monit-5.8.1-r1.ebuild 1289 SHA256 ee075ee2cc1ba68375efc2bc612789dbe0752e27fd1e3275953b68903a8e296e SHA512 c221729b62089feae08f3280600e338394913ad3cc3d12b6e4287e6abb1f6c83b1af16b94403c9586ac0726fcf39ebbd4115bb310d9b33dd516256414dc80bed WHIRLPOOL 676c71fdbe9ca752b431106ae4c2aec6efcfa8f49cd37b21063e3f093ca74edc4901b0186f04adaa6d295e16eb7d6b39c10159f57062d24585196f653afd0d7b
 EBUILD monit-5.8.ebuild 1281 SHA256 5244a48b78cf268043fc1ac348ef23ca93f655e59e48f820b7630c37e8c838c2 SHA512 29826023b527a001582d25ef8ee14096916f1f7f6a96e24dd1d0f092bfed3dd3e86fc4aea3151a6cbb3517dc7fb28fbed15bed0e2d87c62c2e3ceda531df7d45 WHIRLPOOL 14c5950a6c3518dae2afa345feb6463abc7c4c6fd9430242479e9fde0f886c5b820d21553d7c5a5d5814fc01aaede1e515016d7fda3a5abd06656252f309a5da
-EBUILD monit-5.9.ebuild 1284 SHA256 2116e2ddf556d2a6d125abc309269f9212e63d217d46bfd539d063cb6c60fcc0 SHA512 4e27005d9c8c379616e9abab17715f28c1d5cbe799c58d3747cf53d240ed29cd813d16544ae57bd1cb28704cd9387a2de93688325ff7e19cd689b559175c954a WHIRLPOOL 767eebc8132d85b42f9faced2100c083750ea41e8702d5f4d49f9d6c051b4317e7dbaa5413ba1ce93c09126dc99987cd7a53505f3262690234e01cd2fb3e3432
-MISC ChangeLog 11224 SHA256 2ca0799d48ec596d107aa146a80653f167832bb2bcb82f4aa0e35329620ccf6a SHA512 6d32a53a07977727034736f51e8b15934d52d11f10aa29dbe3b1ad0440aa5b10e303055899cb0defd4ea306079ad39e6f7178bc0a152b477ce464e8d71837624 WHIRLPOOL 5a71718973543b6c4651ba6ed2acd1760245330d2a501426f12b09d463649876e007746cdcd09bf70f9f4cc50fe69fcc5b247f4333b90eb4a714b4172034e882
+EBUILD monit-5.9.ebuild 1282 SHA256 e9762e48f9e3084a5981c48c8c72746ab22dc5f559b005f7f792c6adab744948 SHA512 468a7f082af12902ac20d26f3b90037502f374be23c4a15f0da1a80768c2813534b7761bb6ca9bff76e3d48fdc2d6e946353db5a01de296ad3d1e026b7ec30a4 WHIRLPOOL 50be4cf4394aa84e67c52a284fa32ef6b2d4d4be1e5f5d47036bc95e648b7d2a6e41a8f46f229ad875b552ffeb5603d340ff657c2b7342db42bd7e04c9f93548
+MISC ChangeLog 11339 SHA256 0b7f37c9ca1a5fbf31bc7c9e61ddca8e6bd4a0e3e645137161fe4f913a3dd0c4 SHA512 d8120271fa257423349ec092d859e05c58784104afc5f7ddde0fdb78286bcae4df9fe54ef93c8affcd7d8d623c3a7bce2220617747b2433ee91901889004e2b7 WHIRLPOOL ae46aa92baf56e8c0981a7a5ef7ce51561e30ee7684ec8f3200555157c5f3e17a13e2e9bf73d005d50c6f53651308f5f5cd8e5b89009739afc6acdf2c6750880
 MISC metadata.xml 261 SHA256 ac124e183c6da5584dfc0e5c96394d21644fee96e4903b35dbecd1889dda1459 SHA512 3b3b6fbed33ff34af48289806b3bf518a100dceb54c4121c3c2fed662a89373bc49dd29dd274373347594d80eaeda225633ff72b77c5bb2eba1b97710197e054 WHIRLPOOL 0a80445fb6627429b8630277ec99ffba2f3298c47539012638ae9a7c8a8b6656033562bebca3d669fadf88b90be9933c67e6a43fcf0862201c1086d6d341bb34
