@@ -4,15 +4,13 @@ Hash: SHA256
 AUX dee-1.0.10-gcc-4.5.patch 683 SHA256 820cbadcc01ab07151646460441a33f4fd6701b465098e8b2addd3d4d7758bf4 SHA512 7c4fbb9df88340f8751d079530aa59b2da9b8b844d72b029bf497ee43defeab0da8218f23dd3785d6a21f75b237aa400a667c513e1ea866bb339aa2d104ecebd WHIRLPOOL df9aca4e1763dc992b1a148993891a60e09fa1c740e84e498829f1be125ede220c359c5d538349f108cc2a6f5c197f66833136c4bb7743d22b66469c02c491ce
 AUX dee-1.0.10-vapigen.patch 633 SHA256 44fa9563cb03712ed5614fd6d92521ebea3af3e4ea57b3e85c790eacff7f3c97 SHA512 40d508a82022b5e733ad27618cd645b28a6eb2769f5e69e1fde3bd291705b3eabbbda4648f495b17215c6d94db371365f005f988aa0830516068ee8fc15444fe WHIRLPOOL 413bc4e9b4145c592805796e6d087e5e288080e42f973d15ec5ec7a0d7a9459c84513b63d9d057ef23da6951677343b6abd0a8064039bd2a827a87e04b39fc1c
 DIST dee-1.0.14.tar.gz 681061 SHA256 1173187eb7d4ef6cbbe8b87d16b4d451ef023bf4151c9759d99bdedaaca3020c SHA512 f18e2ff262fa346c53747e236b13dbab3e379f8479b8af5453ee6a2f26ff9b0f9c0252c65163818b21b56a8c0284bf51f563f0148f17b348ff5a596d25e60d3e WHIRLPOOL eddda43c63f4fb6724ddec788836b6b5770a6822f81947a045644e29fa9b59b5f5e149d62dbcae3c960c8ff6f6b15e4ae898fa3d24e9ccb5148e191492935e9e
-EBUILD dee-1.0.14-r1.ebuild 1302 SHA256 8945d6b2c85eba4c7f4278539e6070c45f8182aedec298ff44e0643dae114199 SHA512 ca3a87cd930fb9ee073c5a1b4627735b8859397dba8b73139033583a4b3a2ad28736b554e43777344b98a6ac09b79bda51f8d399ed6387315ff4a61be9f03005 WHIRLPOOL 781c031bc71eb1ff54b5c2d039d2a0a108a50329a5774dbb3ba8e61bbb790d9a6a22e528302f07359ab2cf6bbe3006ff5582431f03c0111d8ba9b2b1324fb80f
 EBUILD dee-1.0.14-r2.ebuild 1990 SHA256 5e00dc28b7c4594eddd87efe1ce87e3569a437597aac8b0b2fec84163e25d0b6 SHA512 8308b6cf529fc3e1d8b76c3f4b001ad03dd742c330a719eaa42f1498e365f1ad06a154f6258aeb4ec128a2ccdff353a4e75bf69892cd7a9cce5b521597309a04 WHIRLPOOL 585f77ca235ad2ace5f3490a24fb06e1358e3bf70f570c1bfae45156cf9ff629dda1e95066f4caa30f4dbae4079b718a13086dca7300a80573e6eb5648dd12ba
-EBUILD dee-1.0.14.ebuild 1296 SHA256 1e0df8223ad340cde2b5f2a163a0b85946efb8e8291eb73e8d5116e6d41681a2 SHA512 81f944fb0d46a597ba3c93730432e6d2b226c250f94c22c5e844fd3e7d4748548e9400424761c4d6654108dd748151921bec6ba39f851338fa1810de77c01288 WHIRLPOOL ef27d4bb6c95a4315e1f3a66b4e51f3dc3a03fdf4a5c14ca2aad6716b8980ccb4a5050fd749b6a9e30051d072d83d5ad743116d00d2147c6cfc0718708e143c8
-MISC ChangeLog 2966 SHA256 64a99f4158f4c9a08914fd49acf3665aadfff23e1f00ccfaf94914d3cf17312e SHA512 3d5f07ac55b054e53bd4ff58ed27a66c5f59d89c1a2673c0c4ba049ecf03b5ef5af8db2fe35c7be177d6598554c87b45e05bea427df839254ba67c6675400c56 WHIRLPOOL 6f145cd352ea1bc97be148152d4352e3146ba0c7249c9470008392a2258100367adca99642408e39511c7604e8939e10bec52ed0d9c0a65bdfadcb5fb1e2a21a
+MISC ChangeLog 3124 SHA256 e59624202c599f47e6dcdfb53748d81a0b9a42b54f8821664b97048dfece36b6 SHA512 2f523947679b20935a2057fec712851d7f7c684f3fa7d3c1373ce77d67f95591a96acbee68cdd1f8040eba55f9b3d1ced0e8a11ef703f130fe7b4cfbec2dc1ab WHIRLPOOL 9c377580f4c0214667664f0d41f3dd52c728e4220764006d88ff02e1329daceb25b75eaf92d40d00ca16170c8246a3132fed20f79a1d2d2275ce9b199b90ab07
 MISC metadata.xml 205 SHA256 b4660d1f4b47c8c40fc6f986791c6da3f0d7513fe4489a0d2bbb83346dcb1f5b SHA512 0e0b6e89b125b4849b4164e7cabb5297ae930c4db499c6685c3852a60e209418c26eb33e452a0a78e800c960ac5032f97d436bc3b7266a0ac76092f6f2595d11 WHIRLPOOL dc3dc7c840a6640b42e3fc981c95d0a8e43d3b5834f447a09deebc1b35dbb26e48c3d85db73725c42d2036edd9f141fb02a3a9d61522861f4e97e3e974987473
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlKkz8QACgkQCaWpQKGI+9RE2wCeKissBd1PpCdDJSqABr/tSSbE
-HfsAnjEY8QVb4goL5ogfuyfHOUVsy7u+
-=ygcq
+iEYEAREIAAYFAlRLfrgACgkQCaWpQKGI+9RNqQCfXHfZjupUMMwdDBUCGWqJ1Erh
+WpwAnRe1ZBFUBUCkpM2KqoDMVTvJ6fF0
+=B1Zx
 -----END PGP SIGNATURE-----
