@@ -4,10 +4,10 @@ DESCRIPTION=a utility for monitoring and managing daemons or similar programs ru
 EAPI=5
 HOMEPAGE=http://mmonit.com/monit/
 IUSE=pam ssl
-KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux
+KEYWORDS=amd64 ~ppc x86 ~amd64-linux
 LICENSE=GPL-3
 RDEPEND=ssl? ( dev-libs/openssl )
 SLOT=0
 SRC_URI=http://mmonit.com/monit/dist/monit-5.9.tar.gz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=daa194ec9b7aa18a6f8ab06389d658a6
+_md5_=3be4cc6b05019f345f71149e21994f29
