@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-libs/glib:2 dev-libs/icu:= doc? ( dev-util/gtk-doc ) test? ( dev-libs/gtx dev-util/dbus-test-runner ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
-DESCRIPTION=Provide objects allowing to create Model-View-Controller type programs across DBus
-EAPI=5
-HOMEPAGE=https://launchpad.net/dee/
-IUSE=doc debug examples +icu static-libs test
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
-LICENSE=GPL-3
-RDEPEND=dev-libs/glib:2 dev-libs/icu:=
-SLOT=0
-SRC_URI=https://launchpad.net/dee/1.0/1.0.14/+download/dee-1.0.14.tar.gz
-_eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	autotools-utils	3727db64c7b960903d5033280f108080	eutils	32548a82e42dc26e3312581476d2f20c	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=3fffa91e740aad6b64cdd2881b156d82
